[tool.poetry]
name = "httpmock"
version = "0.1.0"
description = "Fluent API for mocking HTTP requests in Python tests"
authors = ["Joseph Hale <me@jhale.dev>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/thehale/httpmock"
repository = "https://github.com/thehale/httpmock"
documentation = "https://github.com/thehale/httpmock"
keywords = [ "test", "mock", "http", "httpretty" ]

[tool.poetry.dependencies]
python = "^3.8"
httpretty = "^1.1.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2,<9.0"
pre-commit = ">=2.20,<4.0"
liccheck = ">=0.8,<0.10"
mypy = ">=0.991,<1.15"
black = ">=22.12,<25.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20240602"

[tool.liccheck]
authorized_licenses = [
    "MIT",
    "Apache-2.0",
    "Apache Software",
    "Apache License, Version 2.0",
    "Apache License 2.0",
    "BSD",
    "BSD-2-Clause",
    "BSD-3-Clause",
    "LGPL-2.1",
    "LGPL-3.0",
    "MPL-2.0",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "Unlicense"
]
unauthorized_licenses = [
    "GPL",
    "GNU General Public License v2 (GPLv2)"
]

[tool.liccheck.authorized_packages]
# None right now.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
